--- a/app/src/main/res/layout/activity_projet_create.xml
+++ b/app/src/main/res/layout/activity_projet_create.xml
@@ -16,7 +16,7 @@
         android:layout_marginStart="57dp"
         android:layout_marginTop="33dp"
         android:ems="10"
-        android:hint="Nom du projet"
+        android:hint="@string/nom_du_projet"
         android:inputType="text"
         app:layout_constraintBottom_toTopOf="@+id/budget_projet"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
         android:layout_marginEnd="38dp"
         android:layout_marginStart="57dp"
         android:ems="10"
-        android:hint="Budget Estimé (DH)"
+        android:hint="@string/budget_estim_dh"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/projet_date"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
         android:layout_marginEnd="38dp"
         android:layout_marginStart="57dp"
         android:ems="10"
-        android:hint="Date de début du projet"
+        android:hint="@string/date_de_d_but_du_projet"
         android:inputType="date"
         android:singleLine="false"
         android:focusable="false"
@@ -78,7 +78,7 @@
         android:layout_marginEnd="38dp"
         android:layout_marginStart="57dp"
         android:ems="10"
-        android:hint="Déscription"
+        android:hint="@string/d_scription"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/ajouter_projet"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,7 +94,7 @@
         android:layout_marginStart="57dp"
         android:background="@drawable/rounded_button"
         android:onClick="createProjet"
-        android:text="Ajouter"
+        android:text="@string/ajouter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
