--- a/app/src/main/res/layout/activity_societe_create.xml
+++ b/app/src/main/res/layout/activity_societe_create.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="82dp"
         android:layout_marginStart="82dp"
         android:layout_marginTop="36dp"
-        android:text="Ajout d'une societé"
+        android:text="@string/ajout_societe"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="24sp"
@@ -34,7 +34,7 @@
         android:layout_marginEnd="42dp"
         android:layout_marginStart="42dp"
         android:ems="10"
-        android:hint="Raison sociale"
+        android:hint="@string/raison_sociale"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/textViewDate"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
         android:layout_marginStart="42dp"
         android:ems="10"
         android:focusable="false"
-        android:hint="Date de fondation"
+        android:hint="@string/date_fondation"
         android:inputType="date"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/manager_spinner"
@@ -77,7 +77,7 @@
         android:layout_marginBottom="37dp"
         android:layout_marginEnd="42dp"
         android:background="@drawable/rounded_button"
-        android:text="Créer"
+        android:text="@string/create"
         app:layout_constraintBottom_toTopOf="@+id/create_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/manager_spinner" />
@@ -91,7 +91,7 @@
         android:layout_marginStart="108dp"
         android:background="@drawable/rounded_button"
         android:onClick="create"
-        android:text="Ajouter"
+        android:text="@string/add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
