--- a/app/src/main/res/layout/activity_tache_create.xml
+++ b/app/src/main/res/layout/activity_tache_create.xml
@@ -16,7 +16,7 @@
         android:layout_marginStart="38dp"
         android:ems="10"
         android:focusable="false"
-        android:hint="Date : jj-mm-aaaa"
+        android:hint="@string/date_jj_mm_aaaa"
         android:inputType="date"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/heur_tache"
@@ -34,7 +34,7 @@
         android:layout_marginTop="14dp"
         android:ems="10"
         android:focusable="false"
-        android:hint="Heure : HH:mm"
+        android:hint="@string/heure_hh_mm"
         android:inputType="time"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/duree_tache"
@@ -50,7 +50,7 @@
         android:layout_marginEnd="38dp"
         android:layout_marginStart="38dp"
         android:ems="10"
-        android:hint="Durée (Heurs)"
+        android:hint="@string/dur_e_heurs"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/projet_spinner_tache"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +90,7 @@
         android:layout_marginEnd="38dp"
         android:layout_marginStart="38dp"
         android:ems="10"
-        android:hint="Commentaire"
+        android:hint="@string/commentaire"
         android:inputType="textMultiLine"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/ajouter_tache"
@@ -107,7 +107,7 @@
         android:layout_marginStart="48dp"
         android:background="@drawable/rounded_button"
         android:onClick="createDepense"
-        android:text="Ajouter"
+        android:text="@string/add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
