--- a/app/src/main/res/layout/depense_edit_popup.xml
+++ b/app/src/main/res/layout/depense_edit_popup.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="72dp"
         android:layout_marginTop="47dp"
         android:ems="10"
-        android:hint="Montant"
+        android:hint="@string/montant"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:inputType="number"
@@ -37,7 +37,7 @@
         android:layout_marginEnd="71dp"
         android:layout_marginStart="72dp"
         android:ems="10"
-        android:hint="Date"
+        android:hint="@string/date"
         android:inputType="date"
         app:layout_constraintBottom_toTopOf="@+id/heur_edit"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
         android:layout_marginEnd="71dp"
         android:layout_marginStart="72dp"
         android:ems="10"
-        android:hint="Heur"
+        android:hint="@string/heure"
         android:inputType="time"
         app:layout_constraintBottom_toTopOf="@+id/commentaire_edit"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
         android:layout_marginEnd="71dp"
         android:layout_marginStart="72dp"
         android:ems="10"
-        android:hint="Commentaire"
+        android:hint="@string/commentaire"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/button_edit"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +82,7 @@
         android:layout_marginEnd="71dp"
         android:layout_marginStart="71dp"
         android:background="@drawable/rounded_button"
-        android:text="Update"
+        android:text="@string/update"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
