--- a/app/src/main/res/layout/depense_info_popup.xml
+++ b/app/src/main/res/layout/depense_info_popup.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="22dp"
         android:layout_marginStart="85dp"
         android:layout_marginTop="17dp"
-        android:text="Date :"
+        android:text="@string/date"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
@@ -28,7 +28,7 @@
         android:layout_width="181dp"
         android:layout_height="48dp"
         android:layout_marginEnd="1dp"
-        android:text="Sharpinfo societe for infomation"
+        android:text="@string/sharpinfo_societe_for_infomation"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/projet_popup"
@@ -42,7 +42,7 @@
         android:layout_marginBottom="17dp"
         android:layout_marginEnd="91dp"
         android:layout_marginTop="59dp"
-        android:text="DHs"
+        android:text="@string/dhs"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/societe_popup"
@@ -57,7 +57,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="10dp"
-        android:text="85500"
+        android:text="@string/_85500"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/societe_popup"
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="138dp"
-        android:text="15:35"
+        android:text="@string/_15_35"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView9"
@@ -87,7 +87,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="58dp"
         android:layout_marginTop="16dp"
-        android:text="08-05-2018"
+        android:text="@string/_08_05_2018"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/heur_popup"
@@ -102,7 +102,7 @@
         android:layout_marginBottom="18dp"
         android:layout_marginEnd="22dp"
         android:layout_marginStart="85dp"
-        android:text="Heur :"
+        android:text="@string/heure"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView8"
@@ -117,7 +117,7 @@
         android:layout_marginBottom="23dp"
         android:layout_marginEnd="25dp"
         android:layout_marginStart="60dp"
-        android:text="Societé :"
+        android:text="@string/societ"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView10"
@@ -132,7 +132,7 @@
         android:layout_marginBottom="23dp"
         android:layout_marginEnd="25dp"
         android:layout_marginStart="72dp"
-        android:text="Projet :"
+        android:text="@string/projet"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
@@ -147,7 +147,7 @@
         android:layout_marginBottom="18dp"
         android:layout_marginEnd="22dp"
         android:layout_marginStart="55dp"
-        android:text="Montant :"
+        android:text="@string/montant"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
@@ -159,7 +159,7 @@
         android:id="@+id/projet_popup"
         android:layout_width="182dp"
         android:layout_height="47dp"
-        android:text="Géstion de Projet et de societes Android"
+        android:text="@string/g_stion_de_projet_et_de_societes_android"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/commentaire_popup"
@@ -184,7 +184,7 @@
         android:layout_marginBottom="56dp"
         android:layout_marginEnd="25dp"
         android:layout_marginStart="12dp"
-        android:text="Commentaire :"
+        android:text="@string/commentaire"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -197,7 +197,7 @@
         android:layout_width="179dp"
         android:layout_height="81dp"
         android:layout_marginEnd="3dp"
-        android:text="Type whatever come to your mind in this text area"
+        android:text="@string/type_whatever_come_to_your_mind_in_this_text_area"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
