--- a/app/src/main/res/layout/item_depense_list.xml
+++ b/app/src/main/res/layout/item_depense_list.xml
@@ -20,7 +20,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_weight="1"
-        android:text="08-05-2018 "
+        android:text="@string/_08_05_2018"
         android:textAlignment="textStart"
         android:textColor="@color/black"
         android:textSize="24sp"
@@ -34,7 +34,7 @@
 
         android:layout_marginStart="42dp"
         android:layout_weight="1"
-        android:text="200 000 DHs "
+        android:text="@string/_85500"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text=" 15:30"
+        android:text="@string/_15_35"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/textView11"
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="at"
+        android:text="@string/at"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/depense_date"
