--- a/app/src/main/res/layout/item_projet_list.xml
+++ b/app/src/main/res/layout/item_projet_list.xml
@@ -22,7 +22,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_weight="1"
-        android:text="Nom du projet"
+        android:text="@string/projet"
         android:textAlignment="textStart"
         android:textColor="@color/black"
         android:textSize="24sp"
@@ -42,7 +42,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="32dp"
         android:layout_weight="1"
-        android:text="description du projet"
+        android:text="@string/description_du_projet"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
