--- a/app/src/main/res/layout/item_tache_list.xml
+++ b/app/src/main/res/layout/item_tache_list.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_weight="1"
-        android:text="15-05-2018"
+        android:text="@string/_08_05_2018"
         android:textAlignment="textStart"
         android:textColor="@color/black"
         android:textSize="24sp"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_weight="1"
-        android:text="03"
+        android:text="@string/_03"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="at"
+        android:text="@string/at"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/tache_date"
@@ -66,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="22:17"
+        android:text="@string/_15_35"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/textView7"
@@ -77,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="Heures"
+        android:text="@string/heures"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/tache_nbrheur"
         app:layout_constraintTop_toBottomOf="@+id/tache_date" />
