--- a/app/src/main/res/layout/manager_create_popup.xml
+++ b/app/src/main/res/layout/manager_create_popup.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="84dp"
         android:layout_marginStart="85dp"
         android:layout_marginTop="32dp"
-        android:text="Ajouter un Manager"
+        android:text="@string/ajouter_un_manager"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -30,7 +30,7 @@
         android:layout_marginBottom="19dp"
         android:layout_marginEnd="47dp"
         android:layout_marginStart="48dp"
-        android:hint="Prénom du Manager"
+        android:hint="@string/pr_nom_du_manager"
         app:layout_constraintBottom_toTopOf="@+id/manager_lastname_textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:layout_marginBottom="35dp"
         android:layout_marginEnd="47dp"
         android:layout_marginStart="48dp"
-        android:hint="Nom du Manager"
+        android:hint="@string/nom_du_manager"
         app:layout_constraintBottom_toTopOf="@+id/managerCreatebtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
         android:layout_marginEnd="47dp"
         android:layout_marginStart="48dp"
         android:background="@drawable/rounded_button"
-        android:text="Ajouter"
+        android:text="@string/add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
