--- a/app/src/main/res/layout/tache_info_popup.xml
+++ b/app/src/main/res/layout/tache_info_popup.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="18dp"
         android:layout_marginStart="85dp"
         android:layout_marginTop="16dp"
-        android:text="Date :"
+        android:text="@string/date"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
@@ -29,7 +29,7 @@
         android:layout_height="48dp"
         android:layout_marginBottom="1dp"
         android:layout_marginEnd="1dp"
-        android:text="Sharpinfo societe for infomation"
+        android:text="@string/sharpinfo_societe_for_infomation"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/projet_popup_tache"
@@ -43,7 +43,7 @@
         android:layout_height="25dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="88dp"
-        android:text="Heurs"
+        android:text="@string/heures"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/societe_popup_tache"
@@ -57,7 +57,7 @@
         android:layout_height="24dp"
         android:layout_marginBottom="17dp"
         android:layout_marginTop="20dp"
-        android:text="3"
+        android:text="@string/_03"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/societe_popup_tache"
@@ -72,7 +72,7 @@
         android:layout_height="25dp"
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="108dp"
-        android:text="15:35"
+        android:text="@string/_15_35"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView9"
@@ -87,7 +87,7 @@
         android:layout_marginBottom="18dp"
         android:layout_marginEnd="45dp"
         android:layout_marginTop="16dp"
-        android:text="08-05-2018"
+        android:text="@string/_08_05_2018"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/heur_popup_tache"
@@ -102,7 +102,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="85dp"
-        android:text="Heur :"
+        android:text="@string/heure"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView8"
@@ -117,7 +117,7 @@
         android:layout_marginBottom="23dp"
         android:layout_marginEnd="18dp"
         android:layout_marginStart="64dp"
-        android:text="Societé :"
+        android:text="@string/societ"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView10"
@@ -132,7 +132,7 @@
         android:layout_marginBottom="26dp"
         android:layout_marginEnd="18dp"
         android:layout_marginStart="75dp"
-        android:text="Projet :"
+        android:text="@string/projet"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
@@ -147,7 +147,7 @@
         android:layout_marginBottom="15dp"
         android:layout_marginEnd="18dp"
         android:layout_marginStart="77dp"
-        android:text="Durée : "
+        android:text="@string/dur_e_heurs"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
@@ -160,7 +160,7 @@
         android:layout_width="182dp"
         android:layout_height="47dp"
         android:layout_marginStart="18dp"
-        android:text="Géstion de Projet et de societes Android"
+        android:text="@string/g_stion_de_projet_et_de_societes_android"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/commentaire_popup_tache"
@@ -186,7 +186,7 @@
         android:layout_marginBottom="57dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:text="Commentaire :"
+        android:text="@string/commentaire"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -199,7 +199,7 @@
         android:layout_width="179dp"
         android:layout_height="81dp"
         android:layout_marginEnd="3dp"
-        android:text="Type whatever come to your mind in this text area"
+        android:text="@string/type_whatever_come_to_your_mind_in_this_text_area"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
