--- a/app/src/main/res/layout/activity_depense_create.xml
+++ b/app/src/main/res/layout/activity_depense_create.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="38dp"
         android:layout_marginStart="38dp"
         android:ems="10"
-        android:hint="Montant (DH)"
+        android:hint="@string/montant_dh"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/projet_spinner"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
         android:layout_marginStart="38dp"
         android:ems="10"
         android:focusable="false"
-        android:hint="Date : jj-mm-aaaa"
+        android:hint="@string/date_jj_mm_aaaa"
         android:inputType="date"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/heur_depense"
@@ -73,7 +73,7 @@
         android:layout_marginStart="38dp"
         android:ems="10"
         android:focusable="false"
-        android:hint="Heure : HH:mm"
+        android:hint="@string/heure_hh_mm"
         android:inputType="time"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/commentaire_depense"
@@ -89,7 +89,7 @@
         android:layout_marginEnd="38dp"
         android:layout_marginStart="38dp"
         android:ems="10"
-        android:hint="Commentaire"
+        android:hint="@string/commentaire"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/ajouter_depense"
         app:layout_constraintEnd_toEndOf="parent"
@@ -105,7 +105,7 @@
         android:layout_marginStart="48dp"
         android:background="@drawable/rounded_button"
         android:onClick="createDepense"
-        android:text="Ajouter"
+        android:text="@string/add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
