--- a/app/src/main/res/layout/first_layout.xml
+++ b/app/src/main/res/layout/first_layout.xml
@@ -12,6 +12,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="131dp"
         android:text="First Layout"
-        android:textSize="25dp"/>
+        android:textSize="25sp"/>
 
 </RelativeLayout>
