--- a/app/src/main/res/layout/nav_header_side_menu.xml
+++ b/app/src/main/res/layout/nav_header_side_menu.xml
@@ -31,6 +31,6 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="contact@sharpinfo.ma" />
+        android:text="@string/contact_email" />
 
 </LinearLayout>
