--- a/app/src/main/res/layout/second_layout.xml
+++ b/app/src/main/res/layout/second_layout.xml
@@ -10,5 +10,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="131dp"
         android:text="Second Layout"
-        android:textSize="25dp"/>
+        android:textSize="25sp"/>
 </RelativeLayout>
