--- a/app/src/main/res/layout/tache_edit_popup.xml
+++ b/app/src/main/res/layout/tache_edit_popup.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="46dp"
         android:layout_marginTop="48dp"
         android:ems="10"
-        android:hint="Date"
+        android:hint="@string/date"
         android:inputType="date"
         app:layout_constraintBottom_toTopOf="@+id/heur_edit_tache"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +32,7 @@
         android:layout_marginEnd="43dp"
         android:layout_marginStart="46dp"
         android:ems="10"
-        android:hint="Heur"
+        android:hint="@string/heure"
         android:inputType="time"
         app:layout_constraintBottom_toTopOf="@+id/nbrheur_edit_tache"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,7 @@
         android:ems="10"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:hint="Nombre heurs"
+        android:hint="@string/nombre_heurs"
         android:inputType="number"
         android:text=""
         android:textColor="#000000"
@@ -69,7 +69,7 @@
         android:layout_marginEnd="43dp"
         android:layout_marginStart="46dp"
         android:ems="10"
-        android:hint="Commentaire"
+        android:hint="@string/commentaire"
         android:inputType="textMultiLine"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/button_edit_tache"
@@ -85,7 +85,7 @@
         android:layout_marginEnd="46dp"
         android:layout_marginStart="46dp"
         android:background="@drawable/rounded_button"
-        android:text="Update"
+        android:text="@string/update"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
