--- a/app/src/main/res/menu/activity_side_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_side_menu_drawer.xml
@@ -7,22 +7,22 @@
         <item
             android:id="@+id/nav_first_layout"
             android:icon="@drawable/ic_mode_edit_black_24dp"
-            android:title="Edit profile" />
+            android:title="@string/edit_profile" />
         <item
             android:id="@+id/nav_second_layout"
             android:icon="@drawable/ic_https_black_24dp"
-            android:title="Change password" />
+            android:title="@string/change_password" />
         <item
             android:id="@+id/nav_third_layout"
             android:icon="@drawable/ic_help_black_24dp"
-            android:title="About" />
+            android:title="@string/about" />
     </group>
 
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_share"
             android:icon="@drawable/ic_power_settings_new_black_24dp"
-            android:title="Logout" />
+            android:title="@string/logout" />
     </group>
 
 </menu>
