--- a/app/src/main/res/layout/tache_info_popup.xml
+++ b/app/src/main/res/layout/tache_info_popup.xml
@@ -11,28 +11,23 @@
         android:id="@+id/textView2"
         android:layout_width="49dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="24dp"
         android:text="@string/date"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toStartOf="@+id/date_popup_tache"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/societe_popup_tache"
         android:layout_width="181dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="1dp"
-        android:layout_marginEnd="1dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         android:text="@string/sharpinfo_societe_for_infomation"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/projet_popup_tache"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
@@ -41,42 +36,35 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="88dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:text="@string/heures"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/societe_popup_tache"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/nbrheur_popup_tache"
         app:layout_constraintTop_toBottomOf="@+id/heur_popup_tache" />
 
     <TextView
         android:id="@+id/nbrheur_popup_tache"
-        android:layout_width="46dp"
-        android:layout_height="24dp"
-        android:layout_marginBottom="17dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         android:text="@string/_03"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/societe_popup_tache"
-        app:layout_constraintEnd_toStartOf="@+id/textView9"
         app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/heur_popup_tache"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/heur_popup_tache" />
 
     <TextView
         android:id="@+id/heur_popup_tache"
         android:layout_width="74dp"
         android:layout_height="25dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="108dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         android:text="@string/_15_35"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView9"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/date_popup_tache" />
 
@@ -84,44 +72,35 @@
         android:id="@+id/date_popup_tache"
         android:layout_width="104dp"
         android:layout_height="24dp"
-        android:layout_marginBottom="18dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:text="@string/_08_05_2018"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/heur_popup_tache"
-        app:layout_constraintEnd_toStartOf="@+id/dismiss_tache"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="51dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="85dp"
+        android:layout_marginStart="81dp"
+        android:layout_marginTop="16dp"
         android:text="@string/heure"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
-        app:layout_constraintEnd_toStartOf="@+id/heur_popup_tache"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="70dp"
-        android:layout_height="25dp"
-        android:layout_marginBottom="23dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginStart="64dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="67dp"
+        android:layout_marginTop="16dp"
         android:text="@string/societ"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView10"
-        app:layout_constraintEnd_toStartOf="@+id/societe_popup_tache"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
@@ -129,14 +108,11 @@
         android:id="@+id/textView10"
         android:layout_width="59dp"
         android:layout_height="24dp"
-        android:layout_marginBottom="26dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginStart="75dp"
+        android:layout_marginStart="78dp"
+        android:layout_marginTop="32dp"
         android:text="@string/projet"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toStartOf="@+id/societe_popup_tache"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
@@ -144,26 +120,23 @@
         android:id="@+id/textView8"
         android:layout_width="57dp"
         android:layout_height="26dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginStart="77dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="16dp"
         android:text="@string/dur_e_heurs"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
-        app:layout_constraintEnd_toStartOf="@+id/nbrheur_popup_tache"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/projet_popup_tache"
         android:layout_width="182dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="18dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
         android:text="@string/g_stion_de_projet_et_de_societes_android"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/commentaire_popup_tache"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView10"
         app:layout_constraintTop_toBottomOf="@+id/societe_popup_tache" />
@@ -183,26 +156,23 @@
         android:id="@+id/textView3"
         android:layout_width="120dp"
         android:layout_height="24dp"
-        android:layout_marginBottom="57dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:text="@string/commentaire"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/commentaire_popup_tache"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <TextView
         android:id="@+id/commentaire_popup_tache"
-        android:layout_width="179dp"
+        android:layout_width="182dp"
         android:layout_height="81dp"
-        android:layout_marginEnd="3dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
         android:text="@string/type_whatever_come_to_your_mind_in_this_text_area"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/projet_popup_tache" />
